@@ -20,3 +20,5 @@
 - Custom Sticker support
 - Properly judge empty message
 - Poll message support (DRAFT)
+  - Can't get current status (TODO)
+  - Can't get answers (TODO)
